Remove java 9 syntax